--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#header">Profil <span class="sr-only">(current)</span></a>
+                        <a class="nav-link page-scroll" href="pages/profil.html">Profil <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#features">Info</a>
+                        <a class="nav-link page-scroll" href="pages/info.html">Info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#details">Akuntabilitas</a>
+                        <a class="nav-link page-scroll" href="pages/akuntabilitas.html">Akuntabilitas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#features">Berita</a>
+                        <a class="nav-link page-scroll" href="pages/berita.html">Berita</a>
                     </li>
                     
                     <!-- Dropdown Menu -->          
@@ -75,7 +75,7 @@
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Layanan Kami</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Cara Pengajuan Layanan</span></a>
+                            <a class="dropdown-item" href="cara-pengajuan-pelayanan.html"><span class="item-text">Cara Pengajuan Layanan</span></a>
                         </div>
                     </li>
 
@@ -192,73 +192,7 @@
         </div>
     <!-- End of News -->
     
-    <!-- Our Sevices -->
-    <!-- <section class="services">
-        <h2 class="h2-title">LAYANAN KAMI</h2>
-        <div class="row">
-          <div class="column">
-            <a href="">
-            <div class="card">
-              <div class="icon-wrapper">
-                <i class="fas fa-file"></i>
-              </div>
-              <h3>SPTJM Online</h3>
-            </div>
-            </a>
-          </div>
-          <div class="column">
-            <a href="">
-            <div class="card">
-              <div class="icon-wrapper">
-                <i class="fas fa-book"></i>
-              </div>
-              <h3>Digilibrary</h3>
-            </div>
-            </a>
-          </div>
-          <div class="column">
-            <a href="">
-            <div class="card">
-              <div class="icon-wrapper">
-                <i class="fas fa-file"></i>
-              </div>
-              <h3>Jurnal LLDIKTI</h3>
-            </div>
-            </a>
-          </div>
-          <div class="column">
-            <a href="">
-            <div class="card">
-              <div class="icon-wrapper">
-                <i class="fas fa-file"></i>
-              </div>
-              <h3>Bulletin LLDIKTI</h3>
-            </div>
-            </a>
-          </div>
-          <div class="column">
-            <a href="">
-            <div class="card">
-              <div class="icon-wrapper">
-                <i class="fas fa-info"></i>
-              </div>
-              <h3>Sisinfo LLDIKTI</h3>
-            </div>
-            </a>
-          </div>
-          <div class="column">
-            <a href="">
-            <div class="card">
-              <div class="icon-wrapper">
-                <i class="fas fa-users"></i>
-              </div>
-              <h3>SKP Online</h3>
-            </div>
-            </a>
-          </div>
-        </div>
-      </section> -->
-    <!-- End of Our Services -->
+
 
     <!-- New Services -->
     <section class="basic-2" id="services">
