commit rabu malam

--- a/article-details.html
+++ b/article-details.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Tivo is a HTML landing page template built with Bootstrap to help you crate engaging presentations for SaaS apps and convert visitors into users.">
+    <meta name="description" content="Selamat Datang di Lembaga Layanan Pendidikan Tinggi Wilayah 4. Jawa Barat dan Banten.">
     <meta name="author" content="Inovatik">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -29,7 +29,7 @@
     <link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="../images/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -64,10 +64,10 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#header">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link page-scroll" href="index.htmlprofil.html">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#features">FEATURES</a>
+                        <a class="nav-link page-scroll" href="index.htmlberita.html">FEATURES</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="index.html#details">DETAILS</a>
