--- a/pages/content1.html
+++ b/pages/content1.html
@@ -47,7 +47,99 @@
     <!-- end of header -->
 
     <!-- Content -->
+    <div class="ex-basic-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="image-container-large">
+                        <img class="img-fluid" src="images/article-details-large.jpg" alt="alternative">
+                    </div> <!-- end of image-container-large -->
+                    <div class="text-container">
+                        <h3>Business Analysis And Reporting Tools</h3>
+                        <p>Tivo also automatically collects and receives certain information from your computer or mobile device, including the activities you perform on our Website, the Platforms, and the Applications, the type of hardware and software you are using (for example, your operating system or browser), and information obtained from cookies. For example, each time you visit the Website or otherwise use the Services, we automatically collect your IP address, browser and device type, access times, the web page from which you came, the regions from which you navigate the web page, and the web page(s) you access (as applicable).</p>
+                        <p>When you first register for a Tivo account, and when you use the Services, we collect some <a class="blue" href="#your-link">Personal Information</a> about you such as:</p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <ul class="list-unstyled li-space-lg indent">
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">The geographic area where you use your computer and mobile devices should be the same with the one of your software</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Your full name, username, and email address and other contact details should be provided in the contact forms</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">A unique Tivo user ID (an alphanumeric string) which is assigned to you upon registration should always be at front</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Every system is backuped regularly and it will not fail</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Your IP Address and, when applicable, timestamp related to your consent and confirmation of consent but please make sure it does</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Other information submitted by you or your organizational representatives via various methods and practiced techniques</div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of col -->
 
+                            <div class="col-md-6">
+                                <ul class="list-unstyled li-space-lg indent">
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Your billing address and any necessary other information to complete any financial transaction, and when making purchases through the Services, we may also collect your credit card or PayPal information or any other sensitive data that you consider</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">User generated content (such as messages, posts, comments, pages, profiles, images, feeds or communications exchanged on the Supported Platforms that can be used)</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Images or other files that you may publish via our Services</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Information (such as messages, posts, comments, pages, profiles, images) we may receive relating to communications you send us, such as queries or comments concerning</div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of col -->
+                        </div> <!-- end of row -->
+                    </div> <!-- end of text-container-->
+                    
+                    <div class="text-container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>Improving Product Strategy</h3>
+                                <p>Tivo also automatically collects and receives certain information from your computer or mobile device, including the activities you perform on our Website, the Platforms, and the Applications, the type of hardware and software you are using (for example, your operating system or browser), and information obtained from cookies.</p>
+                                <p>For example, each time you visit the Website or otherwise use the Services, we automatically collect your IP address, browser and device type, access times, the web page.</p>
+                                <p>The best way to promoted digital products is to provide potential users with free versions that can be tested throughout the product's life.</p>
+                            </div> <!-- end of col -->
+                            <div class="col-md-6">
+                                <div class="image-container-small">
+                                    <img class="img-fluid" src="images/article-details-small.jpg" alt="alternative">
+                                </div> <!-- end of image-container-small -->
+                            </div> <!-- end of col -->
+                        </div> <!-- end of row -->
+                    </div> <!-- end of text-container -->
+
+                    <div class="text-container dark">
+                        <p class="testimonial-text">Tivo is a HTML landing page template tool. By its nature, Services enable our customers to promote their products and services integrate with hundreds of business applications that they already use, all in one place. Services help our customers promote their products and services, marketing and advertising; engaging audiences; scheduling and publishing messages; and analyze the results.</p>
+                    </div> <!-- end of text container -->
+
+                    <div class="text-container last">
+                        <h3>Project Evaluation And Predictions</h3>
+					    <p>By using any of the Services, or submitting or collecting any Personal Information via the Services, you consent to the collection, transfer, storage disclosure, and use of your Personal Information in the manner set out in this Privacy Policy. If you do not consent to the use of your Personal Information in these ways, please stop using the Services. Information in the manner set out in this Privacy Policy. If you do not consent to the use of your Personal Information in these ways, please stop using the Services.</p>
+                    </div> <!-- end of text-container -->
+                    <a class="btn-outline-reg" href="index.html">BACK</a>
+                </div> <!-- end of col-->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of ex-basic-2 -->
     <!-- end of Content -->
 
     <!-- Navigation -->
