--- a/pages/layanan-online.html
+++ b/pages/layanan-online.html
@@ -9,7 +9,7 @@
     <meta name="author" content="LLDIKTI">
 
     <!-- Website Title -->
-    <title>LLDIKTI 4</title>
+    <title>Layanan Online - LLDIKTI 4</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -19,6 +19,7 @@
 	<link href="../css/magnific-popup.css" rel="stylesheet">
 	<link href="../css/styles.css" rel="stylesheet">
 	<link href="../css/pages.css" rel="stylesheet">
+	<link href="../css/themify-icons.css" rel="stylesheet">
 	<!-- Favicon  -->
     <link rel="icon" href="../images/favicon.png">
 </head>
@@ -39,7 +40,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Akuntabilitas</h1>
+                    <h1>Layanan Online</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -47,7 +48,72 @@
     <!-- end of header -->
 
     <!-- Content -->
-
+    <section>
+        <div class="services-grid">
+          <div class="service service1">
+            <i class="fa fa-file"></i>
+            <h4>JAD ONLINE</h4>
+            <a href="https://jad.lldikti4.or.id/login" class="cta">Lihat Selengkapnya</a>
+          </div>
+          <div class="service service2">
+            <i class="fa fa-file"></i>
+            <h4>Jurnal LLDIKT</h4>
+            <a href="https://jurnal.lldikti4.or.id/" class="cta">Lihat Selengkapnya</a>
+          </div>
+          <div class="service service3">
+            <i class="fa fa-book"></i>
+            <h4>Bulletin LLDIKTI</h4>
+            <a href="bulletin.html" class="cta">Lihat Selengkapnya</a>
+          </div>
+        </div>
+        <div class="services-grid">
+            <div class="service service1">
+              <i class="fa fa-file"></i>
+              <h4>Simonev</h4>
+              <a href="https://simonev.lldikti4.or.id/login" class="cta">Lihat Selengkapnya</a>
+            </div>
+            <div class="service service2">
+              <i class="fa fa-users"></i>
+              <h4>Sisinfo LLDIKTI 4</h4>
+              <a href="https://sisinfo.lldikti4.or.id/" class="cta">Lihat Selengkapnya</a>
+            </div>
+            <div class="service service3">
+              <i class="fa fa-file"></i>
+              <h4>Simantu</h4>
+              <a href="https://spmi.lldikti4.or.id/" class="cta">Lihat Selengkapnya</a>
+            </div>
+          </div>
+          <div class="services-grid">
+            <div class="service service1">
+              <i class="fa fa-file"></i>
+              <h4>BKD Online</h4>
+              <a href="https://bkd.lldikti4.or.id/" class="cta">Lihat Selengkapnya</a>
+            </div>
+            <div class="service service2">
+              <i class="fa fa-hospital"></i>
+              <h4>Pindah Homebase</h4>
+              <a href="https://homebase.lldikti4.or.id/" class="cta">Lihat Selengkapnya</a>
+            </div>
+            <div class="service service3">
+              <i class="fa fa-file"></i>
+              <h4>SKP Online</h4>
+              <a href="https://skp.lldikti4.or.id/" class="cta">Lihat Selengkapnya</a>
+            </div>
+          </div>
+          <div class="services-grid">
+            <div class="service service1">
+              <i class="fa fa-book"></i>
+              <h4>Digilibrary</h4>
+              <a href="https://digilib.lldikti4.or.id/" class="cta">Lihat Selengkapnya</a>
+            </div>
+            <div class="service service2">
+              <i class="fa fa-file"></i>
+              <h4>Aplikasi Empat</h4>
+              <a href="https://empat.lldikti4.or.id/login" class="cta">Lihat Selengkapnya</a>
+            </div>
+        
+          </div>
+      </section>
     <!-- end of Content -->
 
     <!-- Navigation -->
