--- a/pages/standar-pelayanan-publik.html
+++ b/pages/standar-pelayanan-publik.html
@@ -9,7 +9,7 @@
     <meta name="author" content="LLDIKTI">
 
     <!-- Website Title -->
-    <title>LLDIKTI 4</title>
+    <title>Standar Pelayanan Publik LLDIKTI Wilayah IV - LLDIKTI 4</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Akuntabilitas</h1>
+                    <h1>Standar Pelayanan Publik</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -47,9 +47,29 @@
     <!-- end of header -->
 
     <!-- Content -->
+    <div class="ex-basic-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12"></div>
+                    <div class="text-container">
+                        <h3>Puji syukur kita panjatkan kehadirat Tuhan Yang Maha Esa, karena atas rahmat dan karunia-Nya Standar Pelayanan Publik LLDIKTI Wilayah IV ini dapat tersusun.</p>
 
+                        <p>Sebagaimana diamanatkan Undang-Undang Nomor 25 Tahun 2009 tentang Pelayanan Publik dan sebagai tindak lanjut Peraturan Menteri Negara Pendayagunaan Aparatur Negara dan Reformasi Birokrasi Nomor 15 tahun 2014 tentang Pedoman Standar Pelayanan, bahwa setiap penyelenggara pelayanan publik wajib menyusun, menetapkan, dan menerapkan Standar Pelayanan serta menetapkan Maklumat Pelayanan dengan memperhatikan kemampuan penyelenggara, kebutuhan masyarakat, dan kondisi lingkungan.</p>
+
+                        <p>Standar Pelayanan Publik ini disusun untuk memberikan informasi kepada pelanggan/stakeholder yang terkait dengan pelayanan LLDIKTI Wilayah IV, mulai dari persyaratan, prosedur, waktu, biaya, hasil sampai dengan penanganan pengaduan. Selain itu juga untuk meningkatkan kualitas dan kinerja pelayanan sesuai dengan kebutuhan masyarakat dan selaras dengan kemampuan penyelenggara sehingga mendapatkan kepercayaan masyarakat.</p>
+
+                        <p>Pada akhirnya kami mengucapkan terima kasih kepada semua pihak yang secara aktif membantu kelancaran Penyusunan Standar Pelayanan Publik LLDIKTI Wilayah IV ini. Semoga Standar Pelayanan Publik yang telah disusun dapat diterapkan dengan baik dan konsisten.
+                        <br>
+                        Download Dokumen Standar Pelayanan Publik LLDIKTI Wilayah IV:</p>
+                    </div> <!-- end of text-container-->
+                    <iframe src="../pdf/2a.-SK-Standar-Pelayanan-Publik-Lampiran-Final-2.pdf" width="600" height="1000"></iframe>
+                    <!-- <object data="../pdf/2a.-SK-Standar-Pelayanan-Publik-Lampiran-Final-2.pdf" width="600" height="400"></object> -->
+                </div> <!-- end of col-->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of ex-basic-2 -->
     <!-- end of Content -->
-
+    
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
