--- a/pages/kegiatan.html
+++ b/pages/kegiatan.html
@@ -9,7 +9,7 @@
     <meta name="author" content="LLDIKTI">
 
     <!-- Website Title -->
-    <title>LLDIKTI 4</title>
+    <title>Agenda Kegiatan LLDIKTI Wilayah IV - LLDIKTI 4</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -39,16 +39,95 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Akuntabilitas</h1>
+                    <h1>Agenda Kegaitan</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </header> <!-- end of ex-header -->
     <!-- end of header -->
 
-    <!-- Content -->
-
-    <!-- end of Content -->
+    <!-- Info -->
+    <div class="container ">
+        <!-- Row 1 -->
+        <div class="news-card">
+        <div class="card__header">
+            <img src="../images/news-images.webp" alt="card__image" class="card__image" width="600">
+        </div>
+        <div class="card__body">
+            <span class="tag tag-blue">Kegiatan</span>
+            <h5>PEMBERITAHUAN BATAS AKHIR LAPORAN AKADEMIK 20202</h5>
+        </div>
+        <div class="card__footer">
+            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+        </div>
+        </div>
+        <div class="news-card">
+            <div class="card__header">
+            <img src="../images/news-images.webp" alt="card__image" class="card__image" width="600">
+            </div>
+            <div class="card__body">
+            <span class="tag tag-blue">Kegiatan</span>
+            <h5>Laporan Kerja sama Perguruan Tinggi</h5>
+            </div>
+            <div class="card__footer">
+            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            </div>
+        </div>
+        <div class="news-card">
+            <div class="card__header">
+            <img src="../images/news-images.webp" alt="card__image" class="card__image" width="600">
+            </div>
+            <div class="card__body">
+            <span class="tag tag-blue">Kegiatan</span>
+            <h5>Penutupan sementara sistem Kegiatanrmasi usul pendirian/perubahan perguruan tinggi swasta (PTS) akademik dan pembukaan program studi akademik dan profesi tahun 2021 serta pergantian aplikasi untuk usulan tahun 2022</h5>
+            </div>
+            <div class="card__footer">
+            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            </div>
+        </div>
+        <!-- end of Row1 -->
+    </div>
+    <div class="container ">
+        <!-- Row 1 -->
+        <div class="news-card">
+        <div class="card__header">
+            <img src="../images/news-images.webp" alt="card__image" class="card__image" width="600">
+        </div>
+        <div class="card__body">
+            <span class="tag tag-blue">Kegiatan</span>
+            <h5>Peluncuran Katalisator Program LLDikti 4 Episode II</h5>
+        </div>
+        <div class="card__footer">
+            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+        </div>
+        </div>
+        <div class="news-card">
+            <div class="card__header">
+            <img src="../images/news-images.webp" alt="card__image" class="card__image" width="600">
+            </div>
+            <div class="card__body">
+            <span class="tag tag-blue">Kegiatan</span>
+            <h5>Undangan “Peluang dan Potensi Implementasi MBKM Melalui Kerjasama dengan ICE Institute”</h5>
+            </div>
+            <div class="card__footer">
+            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            </div>
+        </div>
+        <!-- <div class="news-card">
+            <div class="card__header">
+            <img src="../images/news-images.webp" alt="card__image" class="card__image" width="600">
+            </div>
+            <div class="card__body">
+            <span class="tag tag-blue">Info</span>
+            <h5>UNDANGAN GRAND LAUNCHING WIRA USAHA MERDEKA TAHUN 2022</h5>
+            </div>
+            <div class="card__footer">
+            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            </div>
+        </div> -->
+        <!-- end of Row1 -->
+    </div>
+    <!-- end of Info -->
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
@@ -86,7 +165,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle page-scroll" href="#video" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Layanan</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="layanan-online.html"><span class="item-text">Layanan Online</span></a>
+                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Layanan Online</span></a>
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Layanan Kami</span></a>
                             <div class="dropdown-items-divide-hr"></div>
