--- a/pages/peta-proses-bisnis.html
+++ b/pages/peta-proses-bisnis.html
@@ -9,7 +9,7 @@
     <meta name="author" content="LLDIKTI">
 
     <!-- Website Title -->
-    <title>LLDIKTI 4</title>
+    <title>Peta Proses Bisnis LLDIKTI Wilayah IV - LLDIKTI 4</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Akuntabilitas</h1>
+                    <h1>Peta Proses Bisnis LLDIKTI Wilayah IV</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -47,7 +47,9 @@
     <!-- end of header -->
 
     <!-- Content -->
-
+    <div class="container">
+        <a class="btn-outline-sm" href="log-in.html">KONTAK DAN PENGADUAN</a>
+    </div>
     <!-- end of Content -->
 
     <!-- Navigation -->
