--- a/pages/prosedur-operasional-standar.html
+++ b/pages/prosedur-operasional-standar.html
@@ -9,7 +9,7 @@
     <meta name="author" content="LLDIKTI">
 
     <!-- Website Title -->
-    <title>LLDIKTI 4</title>
+    <title>Prosedur Pelayanan Publik LLDIKTI Wilayah IV - LLDIKTI 4</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -39,7 +39,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Akuntabilitas</h1>
+                    <h1>Daftar Prosedur Operasional Standar
+                        LLDIKTI Wilayah IV</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -47,7 +48,58 @@
     <!-- end of header -->
 
     <!-- Content -->
-
+    <div class="ex-basic-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="text-container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <ul class="list-unstyled li-space-lg indent">
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body"><a href="prosedur-operasional-standar.html">Layanan Akademik</a></div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body"><a href="prosedur-operasional-standar.html">Layanan Kemahasiswaan</a></div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body"><a href="prosedur-operasional-standar.html">Layanan Pendidik dan Tenaga Kependidikan</a></div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body"><a href="prosedur-operasional-standar.html">Layanan Kelembagaan, Sarana dan Prasarana</a></div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body"><a href="prosedur-operasional-standar.html">Layanan Sistem Informasi dan Kerjasama</a></div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body"><a href="prosedur-operasional-standar.html">Layanan Kepegawaian dan Tatalaksana</a></div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body"><a href="prosedur-operasional-standar.html">Layanan Perencanaan dan Penganggaran</a></div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body"><a href="prosedur-operasional-standar.html">Layanan Humas dan Hukum/a></div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body"><a href="prosedur-operasional-standar.html">Layanan Tata Usaha dan Barang Milik Negara</a></div>
+                                    </li>
+                                </ul>
+                            </div> <!-- end of col -->
+                        </div> <!-- end of row -->
+                    </div> <!-- end of text-container-->
+                </div> <!-- end of col-->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of ex-basic-2 -->
     <!-- end of Content -->
 
     <!-- Navigation -->
